# ops_deck

./: .gitignore  COMPLETION_CHECKLIST.md  EXECUTION_SESSION_SUMMARY.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE6_DELIVERABLES.md  PROJECT_COMPLETE.md  README.md  pyproject.toml  ruff.toml  spec.md
.github/agents/: copilot-instructions.md
.github/skills/langchain/: SKILL.md
.specify/memory/: constitution.md
docs/: 01_phase1_pre_plan.md  02_phase1_post_implementation.md  03_phase2_pre_plan.md  04_phase2_post_implementation.md  05_phase3_pre_plan.md  06_phase3_post_implementation.md  07_phase4_pre_plan.md  08_phase4_post_implementation.md  09_phase5_pre_plan.md  10_phase5_post_implementation.md  11_phase6_pre_plan.md  12_phase6_post_implementation.md  13_phase7_pre_plan.md  14_phase7_post_implementation.md  IMPLEMENTATION_SUMMARY.md  PHASE4_SUMMARY.md  PROGRESS.md  issues-deviation-report.md
specs/001-tui-cli-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tui-interactive-shell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-dual-mode.md  tasks.md
src/: __init__.py  app.py  exceptions.py  messages.py
src/models/: __init__.py  command.py  config.py  execution.py  interactive.py  output.py
src/services/: __init__.py  command_runner.py  config.py  interactive_runner.py
src/styles/: app.css
src/widgets/: __init__.py  app.py  command_list.py  output_pane.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_command_runner.py
(+53 files in other folders)
