[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-deck"
version = "0.1.0"
description = "Python TUI dashboard for CLI tools with Command Palette, Output Window, and Non-Blocking Execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ops Deck Contributors"}
]
license = {text = "MIT"}

dependencies = [
    "textual>=0.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
ops-deck = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "C4", "PIE", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Warnings acceptable in initial phases
